--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.0",
